Fixed user not showing

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -87,10 +87,13 @@ body {
 .wrapper .main {
   flex: 1;
   height: 100%;
-  min-width: 100%;
 }
 
 @media (max-width: 992px) {
+  .wrapper .main {
+    min-width: 100%;
+  }
+
   .wrapper .sidebar {
     margin-left: -260px;
   }
